Testing the emergency banner

--- a/app/views/notifications/_global_bar.html.erb
+++ b/app/views/notifications/_global_bar.html.erb
@@ -1,8 +1,8 @@
 <%
-  show_global_bar ||= false # Toggles the appearance of the global bar
-  title = "The title"
-  information = "Some information about something"
-  link_href = "https://www.gov.uk/"
+  show_global_bar ||= true # Toggles the appearance of the global bar
+  title = "Brexit Deal Explained"
+  information = "Read the Withdrawal Agreement and Political Declaration on the future relationship between the UK and the EU."
+  link_href = "https://www.gov.uk/government/publications/withdrawal-agreement-and-political-declaration"
   link_text = %Q(More information<span class="visually-hidden"> about this</span>).html_safe
 -%>
 <% if show_global_bar %>
