--- a/app/views/notifications/_global_bar.html.erb
+++ b/app/views/notifications/_global_bar.html.erb
@@ -1,6 +1,6 @@
 <%
-  show_global_bar ||= false # Toggles the appearance of the global bar
-  title = "The title"
+  show_global_bar ||= true # Toggles the appearance of the global bar
+  title = "Testing the global banner"
   information = "Some information about something"
   link_href = "https://www.gov.uk/"
   link_text = %Q(More information<span class="visually-hidden"> about this</span>).html_safe
