--- a/app/views/root/homepage.html.erb
+++ b/app/views/root/homepage.html.erb
@@ -9,5 +9,5 @@
  # comment
 %>
 <%= render partial: 'base', locals: { hide_nav: true } %>
-<%= render :file => 'layouts/govuk_template' %>
+<%= render file: 'layouts/govuk_template' %>
 <!-- Thanks Martha -->
