--- a/app/views/notifications/_global_bar.html.erb
+++ b/app/views/notifications/_global_bar.html.erb
@@ -1,9 +1,9 @@
 <%
-  show_global_bar ||= false # Toggles the appearance of the global bar
-  title = "The title"
-  information = "Some information about something"
-  link_href = "https://www.gov.uk/"
-  link_text = %Q(More information<span class="visually-hidden"> about this</span>).html_safe
+  show_global_bar ||= true # Toggles the appearance of the global bar
+  title = "national emergency"
+  information = "How did the Kardashians make their millions?"
+  link_href = "https://www.bbc.co.uk/news/business-47793131"
+  link_text = %Q(Money money money).html_safe
 -%>
 <% if show_global_bar %>
   <% content_for :head do %>
