Only set analytics cookies if usage consent given

--- a/app/assets/javascripts/analytics/init.js.erb
+++ b/app/assets/javascripts/analytics/init.js.erb
@@ -1,24 +1,29 @@
 (function() {
   "use strict";
 
-  // Load Google Analytics libraries
-  GOVUK.StaticAnalytics.load();
+  var consentCookie = JSON.parse(window.GOVUK.getCookie("cookie_policy"))
 
-  // Use document.domain in dev, preview and staging so that tracking works
-  // Otherwise explicitly set the domain as www.gov.uk (and not gov.uk).
-  var cookieDomain = (document.domain == 'www.gov.uk') ? '.www.gov.uk' : document.domain;
+  if (!consentCookie || consentCookie["usage"]) {
 
-  var universalId = '<%= Rails.application.config.ga_universal_id %>';
+    // Load Google Analytics libraries
+    GOVUK.StaticAnalytics.load();
 
-  // Configure profiles, setup custom vars, track initial pageview
-  var analytics = new GOVUK.StaticAnalytics({
-    universalId: universalId,
-    cookieDomain: cookieDomain,
-    allowLinker: true,
-    // This is served by Fastly in production, and returns an empty 200 response
-    govukTrackerUrl: '<%= asset_path "/static/a" %>'
-  });
+    // Use document.domain in dev, preview and staging so that tracking works
+    // Otherwise explicitly set the domain as www.gov.uk (and not gov.uk).
+    var cookieDomain = (document.domain == 'www.gov.uk') ? '.www.gov.uk' : document.domain;
 
-  // Make interface public for virtual pageviews and events
-  GOVUK.analytics = analytics;
+    var universalId = '<%= Rails.application.config.ga_universal_id %>';
+
+    // Configure profiles, setup custom vars, track initial pageview
+    var analytics = new GOVUK.StaticAnalytics({
+      universalId: universalId,
+      cookieDomain: cookieDomain,
+      allowLinker: true,
+      // This is served by Fastly in production, and returns an empty 200 response
+      govukTrackerUrl: '<%= asset_path "/static/a" %>'
+    });
+
+    // Make interface public for virtual pageviews and events
+    GOVUK.analytics = analytics;
+  }
 })();
