Change global banner

--- a/app/views/notifications/_global_bar.html.erb
+++ b/app/views/notifications/_global_bar.html.erb
@@ -1,8 +1,8 @@
 <%
   show_global_bar ||= true # Toggles the appearance of the global bar
-  title = "The United Kingdom is leaving the European Union on 31 October 2019."
-  link_href = "/brexit"
-  link_text = "Get ready for Brexit"
+  title = "Potiphar had very few cares. He was one of Egypt's millionaires"
+  link_href = "/potiphar"
+  link_text = "He had made his money buying shares in pyramids"
 -%>
 <% if show_global_bar %>
   <% content_for :head do %>
