--- a/app/views/root/_base.html.erb
+++ b/app/views/root/_base.html.erb
@@ -31,6 +31,7 @@
 <% end %>
 
 <% content_for :content do %>
+  <%= DateTime.now() %>
   <%= render "notifications/global_bar" %>
 
   <div id="wrapper" class="group">
