--- a/app/views/notifications/_global_bar.html.erb
+++ b/app/views/notifications/_global_bar.html.erb
@@ -1,5 +1,5 @@
 <%
-  show_global_bar ||= false # Toggles the appearance of the global bar
+  show_global_bar ||= true # Toggles the appearance of the global bar
   title = "Register to vote"
   title_href = "/register-to-vote"
   link_text = "Register by 26 November to vote in the General Election on 12 December."
